# r-visor

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
comparison/compressed/archvisor/: decodeFile.rdec
comparison/compressed/drrio/: codec.c
comparison/float/archvisor/: decodefile.rdec
comparison/float/drrio/: codec.c
embench/: aha-mont64  crc32  cubic  edn  huffbench  matmult-int  md5sum  minver  nbody  nettle-aes  nettle-sha256  nsichneu  picojpeg  primecount  qrduino  sglib-combined  slre  st  statemate  tarfind  ud  wikisort
eval/bb_frequency/: bb_frequency_logs  bb_frequency_plot.py
eval/dbt/: run.ipynb
eval/performance/: consolidate.ipynb  fpga_logs.csv  fpga_logs_averaged.csv  fpga_logs_consolidated.csv  fpga_logs_relative.csv
helpers/: vector.c  vector.h
routines/: bb_frequency.c  dbt.c  tlrvisor.c  tlrvisor_bb.c
src/: code_cache.c  code_cache.h  decode.c  decode.h  decodeFile.rdec  decodeFileDBT.rdec  dispatcher.c  dispatcher.h  elf_reader.c  elf_reader.h  encode.h  instruction_names.h  instructions.h  logger.c  logger.h  opcodes.h  parse.py  printUtils.c  printUtils.h  rail.c  rail.h  railBasicBlock.h  regfile.h  util.S  util.h
